--- a/jvm/src/main/resources/css/tree.css
+++ b/jvm/src/main/resources/css/tree.css
@@ -47,6 +47,7 @@
     text-align: center;
     padding-top: 10px;
     padding-bottom: 6px;
+    cursor: pointer;
 }
 
 .mdl-data-table .mdl-data-table__cell--priority-high {
